--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="button">
                 <a href="https://discordapp.com/oauth2/authorize?client_id=588009094858670100&scope=bot&permissions=281600" target="_blank">Add To Your Server</a>
             </div>
-            <p>Grab you and your mates player stats right on Discord, check out up to date leaderboards on a range of statistics and configure the bot exactly for you and your server</p>
+            <p>Type <mark>!help</mark> to get started. Grab you and your mates player stats right on Discord, check out up to date leaderboards on a range of statistics and configure the bot exactly for you and your server</p>
             <tr>
                 <th>Stats</th>
                 <th>Leaderboards</th> 
